RESOLVED FIXED43131
Assertion failure in Connection::sendOutgoingMessage if the other process exits at just the wrong time
https://bugs.webkit.org/show_bug.cgi?id=43131
Summary Assertion failure in Connection::sendOutgoingMessage if the other process exi...
Adam Roben (:aroben)
Reported 2010-07-28 11:36:34 PDT
Assertion failure in Connection::sendOutgoingMessage if the other process exits at just the wrong time
Attachments
Patch (1.59 KB, patch)
2010-07-28 11:37 PDT, Adam Roben (:aroben)
darin: review+
Adam Roben (:aroben)
Comment 1 2010-07-28 11:37:18 PDT
Adam Roben (:aroben)
Comment 2 2010-07-28 12:59:32 PDT
Note You need to log in before you can comment on or make changes to this bug.