Teach CoreIPC how to handle with a pipe closing during a write

Fixes <http://webkit.org/b/43131> Assertion failure in
Connection::sendOutgoingMessage if the other process exits at just the
wrong time

Reviewed by Darin Adler.

* Platform/CoreIPC/win/ConnectionWin.cpp:
(CoreIPC::Connection::sendOutgoingMessage): If ::WriteFile fails with
ERROR_NO_DATA, the pipe (and thus the connection) has closed.

Canonical link: https://commits.webkit.org/55049@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@64224 268f45cc-cd09-0410-ab3c-d52691b4dbfc